# oshsean

./: README.md
C Programs for Beginners/: README.md
C Programs for Beginners/lab01/: bad_pun
C Programs for Beginners/lab02/: count5  heron  heron.c
C Programs for Beginners/lab03/: cubes.c  is_leap_year.c  leap_years.c  one_loop_square.c
C Programs for Beginners/lab04/: chessboard.c
C Programs for Beginners/lab05/: count_farnarkles.c  count_test.c  farnarkle.h
C Programs for Beginners/lab06/: border.c  substitution.c
C Programs for Beginners/lab07/: bounding_box.c  captcha.h  horizontal_balance.c  print_image.c  test_bounding_box.c  test_copy_pixels.c  test_horizontal_balance.c
Connect4 Robotic Arm/: LICENSE  README.md  Resources MTRN4320.xlsx
Connect4 Robotic Arm/ConnEGGt4_ws/src/armee_world/: CMakeLists.txt  README.md
Connect4 Robotic Arm/ConnEGGt4_ws/src/armee_world/launch/: armeeworld.launch  armeeworldsave.launch  ur5e_epick_bringup.launch
Connect4 Robotic Arm/ConnEGGt4_ws/src/armee_world/launch/inc/: load_ur5e_epick.launch.xml  ur_control.launch.xml
Connect4 Robotic Arm/ConnEGGt4_ws/src/armee_world/models/Grid/: FinalGrid.dae  FinalGrid.stl  GridInit.dae  model.config  model.sdf
Connect4 Robotic Arm/ConnEGGt4_ws/src/armee_world/models/RCounter/: model.config  model.sdf
Connect4 Robotic Arm/ConnEGGt4_ws/src/armee_world/models/Store/: model.config  model.sdf
Connect4 Robotic Arm/ConnEGGt4_ws/src/armee_world/models/YCounter/: model.config  model.sdf
Connect4 Robotic Arm/ConnEGGt4_ws/src/armee_world/src/nodes/: cam_pub_cpp.cpp  controller.cpp  controller_2.cpp  controller_3.cpp  coord_sub.cpp  counter_pickup_sub.cpp  spawn_assets.cpp  spawn_counters_OLD.cpp  ur5e_epick_move_group_interface.cpp
Connect4 Robotic Arm/ConnEGGt4_ws/src/armee_world/urdf/: camera.gazebo.xacro  camera_description.urdf.xacro  camera_model.xacro  robot_description.urdf.xacro  ur5e_robotiq_epick_robot.urdf.xacro
Connect4 Robotic Arm/ConnEGGt4_ws/src/armee_world/urdf/inc/: camera.gazebo.xacro  camera_model.xacro  robotiq_epick_model.xacro  ur5e_macro.xacro
Connect4 Robotic Arm/ConnEGGt4_ws/src/armee_world/worlds/: Armee.world
Maze solving Robot/: README.md
Minimate scripts/: load_minimate_v20240220.py  template_minimate.py
Noise & Vibration Calculations/: Moving Point Source (on a line) 1.xlsx  NPfI Calculator MASTER v2.1.xlsx  VDV on-time.xlsx
Working Elevator/: Assembly1-1.s  README.md  lab-2-part-b-2.asm  lab-2-part-b.asm  lab-2-partc.asm  lab1-q2-1.asm  lab2-part-a.s  main.asm  partc.asm
(+148 files in other folders)
